Fix network dropdown overflow

--- a/src/components/networkAccountSelector/style.less
+++ b/src/components/networkAccountSelector/style.less
@@ -52,6 +52,7 @@
         left: 0;
         background-color: #2a2a2a;
         width: 320px;
+        max-width: 100%;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .50);
         padding: 20px 0 20px 0;
         z-index: 2;
